IT-19291: load account.js for approve/reject

--- a/api/templates/accounts.html
+++ b/api/templates/accounts.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block title %}Non Approved Accounts{% endblock %}
 {% block javascripts %}
-    <script src="{{ url_for('static', filename = 'accounts.js') }}"></script>
+    <script src="{{ url_for('static', filename = 'account.js') }}"></script>
 {% endblock %}
 {% block content %}
             <div class="scroll">
