IT-19291: Show account ID on login page

--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -16,10 +16,10 @@
     <img src="{{ url_for('static', filename='img/cirata-logo.svg') }}" class="logo mb-4" alt="Cirata">
     <h1 class="mb-4">Account Approved</h1>
     <p class="lead">
-      Your account and subscription entitlement request have been approved.
+      Thank you, your information has been registered and your account has now been approved.
     </p>
     <p class="mb-4">
-      Please contact Cirata customer service to begin your deployment. You can reference your account id which is shown below.
+      Please contact Cirata customer service to approve your subscription entitlement, and begin your app deployment. You can reference your account id which is shown below.
     </p>
     {% if account_id %}
       <p class="lead">
