IT-19291: Improve email wording

--- a/api/templates/signup_email.html
+++ b/api/templates/signup_email.html
@@ -15,7 +15,7 @@
   <div class="container my-5">
     <h1 class="mb-4">New Signup Request</h1>
     <p class="lead">
-      A new signup request has been submitted. Please review the details below:
+      A new account signup request has been created for one of our Google Marketplace offerings. Please review the customers details below:
     </p>
     <hr>
     <div class="text-left">
