IT-19291: Address review feedback, add partner email

--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -20,6 +20,8 @@
     </p>
     <p class="mb-4">
       Please contact Cirata customer service to approve your subscription entitlement, and begin your app deployment. You can reference your account id which is shown below.
+
+      Contact Email: partnermarketplace@cirata.com
     </p>
     {% if account_id %}
       <p class="lead">
